--- a/final-framework-testng/test-output/old/Default suite/methods.html
+++ b/final-framework-testng/test-output/old/Default suite/methods.html
@@ -1,12 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="af6cff">  <td>19/11/20 09:45:28</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Retail_Register.setUpBeforeClass()[pri:0, instance:com.training.sanity.tests.Retail_Register@482f8f11]">&gt;&gt;setUpBeforeClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1308244637</td>   <td></td> </tr>
-<tr bgcolor="af6cff">  <td>19/11/20 09:45:28</td>   <td>25</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Retail_Register.setUp()[pri:0, instance:com.training.sanity.tests.Retail_Register@482f8f11]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@1308244637</td>   <td></td> </tr>
-<tr bgcolor="af6cff">  <td>19/11/20 09:45:41</td>   <td>13613</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Retail_Register.validLoginTest()[pri:0, instance:com.training.sanity.tests.Retail_Register@482f8f11]">validLoginTest</td> 
-  <td>main@1308244637</td>   <td></td> </tr>
-<tr bgcolor="af6cff">  <td>19/11/20 09:46:19</td>   <td>51553</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Retail_Register.tearDown()[pri:0, instance:com.training.sanity.tests.Retail_Register@482f8f11]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1308244637</td>   <td></td> </tr>
+<tr bgcolor="af6cff">  <td>19/11/29 11:00:29</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;WithPrelogin.setUpBeforeClass()[pri:0, instance:com.training.sanity.tests.WithPrelogin@51565ec2]">&gt;&gt;setUpBeforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@342597804</td>   <td></td> </tr>
+<tr bgcolor="af6cff">  <td>19/11/29 11:00:29</td>   <td>10</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;WithPrelogin.setUp()[pri:0, instance:com.training.sanity.tests.WithPrelogin@51565ec2]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@342597804</td>   <td></td> </tr>
+<tr bgcolor="af6cff">  <td>19/11/29 11:00:51</td>   <td>21385</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="WithPrelogin.validLoginTest()[pri:0, instance:com.training.sanity.tests.WithPrelogin@51565ec2]">validLoginTest</td> 
+  <td>main@342597804</td>   <td></td> </tr>
 </table>
